--- a/package.json
+++ b/package.json
@@ -10,15 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.10",
+    "@nextui-org/accordion": "^2.0.40",
+    "@nextui-org/input": "^2.2.5",
+    "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/navbar": "^2.0.37",
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@reduxjs/toolkit": "^2.2.7",
     "appwrite": "^15.0.0",
+    "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-parallax": "^3.5.1",
+    "react-parallax-tilt": "^1.7.239",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "redux": "^5.0.1"
+    "react-tilt": "^1.0.2",
+    "redux": "^5.0.1",
+    "tilt.js": "^1.2.1",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -26,6 +38,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
